--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,6 +1,8 @@
 services:
   app:
-    build: "."
+    build:
+      context: .
+      target: final
     container_name: 'app-bookstore'
     platform: linux/amd64
     ports:
@@ -9,6 +11,7 @@ services:
       db:
         condition: service_healthy
     environment:
+      - RUST_LOG=debug
       - DB_HOST=db
       - DB_PORT=3306
       - DB_DATABASE=bookstore
