--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ serde = { version = "1.0.210", features = ["derive"] }
 jsonwebtoken = "9.3.0"
 bcrypt = "0.15.1"
 dotenvy = "0.15.7"
+rocket_prometheus = "0.10.1"
+prometheus = "0.13.4"
+lazy_static = "1.5.0"
+mime = "0.3.17"
+once_cell = "1.19.0"
