--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -6,11 +6,11 @@ rule_files:
   - alert.yml
 
 scrape_configs:
-  - job_name: 'Bookstore App'
+  - job_name: 'Rust Rocket REST API App'
     metrics_path: '/metrics'
     scrape_interval: 2s
     static_configs:
       - targets:
           - 'host.docker.internal:8000'
         labels:
-          application: 'bookstore'
+          application: 'rust-rocket-restapi'
